# autophagy

./: .gitignore  .mise.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  macos-app.yml  release.yml
adapters/claude-code/: Cargo.toml
adapters/claude-code/src/: discovery.rs  importer.rs  lib.rs  normalize.rs
adapters/claude-code/tests/: import.rs
adapters/claude-code/tests/fixtures/projects/-workspace-demo/: 11111111-1111-4111-8111-111111111111.jsonl
adapters/claude-code/tests/fixtures/projects/-workspace-demo/11111111-1111-4111-8111-111111111111/subagents/: agent-a.jsonl
adapters/codex/: Cargo.toml
adapters/codex/src/: discovery.rs  importer.rs  lib.rs  normalize.rs
adapters/codex/tests/: import.rs
adapters/opencode/: Cargo.toml
adapters/opencode/src/: discovery.rs  importer.rs  lib.rs  normalize.rs
adapters/opencode/tests/: import.rs
adapters/pi/: Cargo.toml
adapters/pi/src/: discovery.rs  importer.rs  lib.rs  normalize.rs
adapters/pi/tests/: import.rs
apps/macos/: Package.swift
apps/macos/scripts/: make-app-bundle.sh
crates/autophagy-adapter-test-support/: Cargo.toml
crates/autophagy-adapter-test-support/src/: lib.rs
crates/autophagy-cli/: Cargo.toml
crates/autophagy-cli/src/: config.rs  daemon.rs  detection.rs  main.rs  setup.rs  status.rs  watch.rs
crates/autophagy-cli/tests/: cli.rs
crates/autophagy-core/: Cargo.toml
crates/autophagy-core/src/: generic_jsonl.rs  lib.rs  reindex.rs  watch.rs
crates/autophagy-core/tests/: generic_jsonl.rs
crates/autophagy-core/tests/fixtures/: mixed.jsonl
crates/autophagy-efficacy/: Cargo.toml
crates/autophagy-efficacy/src/: evaluate.rs  lib.rs  model.rs  validate.rs
crates/autophagy-efficacy/tests/: efficacy.rs
crates/autophagy-events/: Cargo.toml
crates/autophagy-events/src/: error.rs  event.rs  id.rs  lib.rs  signature.rs
crates/autophagy-events/tests/: contract.rs
crates/autophagy-events/tests/fixtures/invalid/: artifact_without_locator.json  called_with_exit.json  completed_with_nonzero_exit.json  failed_with_zero_exit.json  failed_without_tool.json  invalid_event_id.json  self_parent.json  unknown_field.json
crates/autophagy-events/tests/fixtures/valid/: session_started.json  tool_failed.json  user_correction.json
crates/autophagy-genome/: Cargo.toml
crates/autophagy-genome/src/: lib.rs  model.rs
crates/autophagy-genome/tests/: genome.rs
crates/autophagy-install/: Cargo.toml
crates/autophagy-install/src/: lib.rs  supervisor.rs
crates/autophagy-install/tests/: codex_skill.rs
crates/autophagy-mutations/: Cargo.toml
crates/autophagy-mutations/src/: generate.rs  lib.rs  model.rs  validate.rs
crates/autophagy-mutations/tests/: candidates.rs
crates/autophagy-patterns/: Cargo.toml
crates/autophagy-patterns/src/: correction.rs  evidence.rs  failure.rs  lib.rs  recovery.rs  report.rs  score.rs  signature.rs
crates/autophagy-patterns/tests/: detectors.rs
crates/autophagy-redaction/: Cargo.toml
crates/autophagy-redaction/src/: lib.rs
crates/autophagy-replay/: Cargo.toml
crates/autophagy-replay/src/: evaluate.rs  extract.rs  lib.rs  model.rs  validate.rs
crates/autophagy-replay/tests/: replay.rs
crates/autophagy-shadow/: Cargo.toml
crates/autophagy-shadow/src/: evaluate.rs  extract.rs  lib.rs  model.rs  validate.rs
crates/autophagy-shadow/tests/: shadow.rs
crates/autophagy-store/: Cargo.toml
crates/autophagy-store/migrations/: 0001_initial.sql  0001_initial_schema.sql  0002_findings_cache.sql  0002_source_cursors.sql  0003_mutation_efficacy.sql  0003_mutation_registry.sql  0004_mutation_attestations.sql  0006_retrieval_signature.sql  0007_claude_code_install_target.sql
crates/autophagy-store/src/: error.rs  lib.rs  migration.rs  model.rs  store.rs  util.rs
crates/autophagy-store/tests/: legacy_adoption.rs  schema_equivalence.rs  store.rs
crates/autophagy-store/tests/common/: mod.rs
crates/autophagy-store/tests/legacy/: 0004_replay_evaluation.sql  0005_shadow_install.sql  0008_mutation_provenance.sql
crates/autophagy-synthesis/: Cargo.toml
crates/autophagy-synthesis/src/: agent_cli.rs  deterministic.rs  lib.rs  manifest.rs  prompt.rs  provider.rs  remote.rs  synthesize.rs  validate.rs
crates/autophagy-synthesis/tests/: agent_cli.rs  boundary.rs  http_providers.rs
docs/architecture/: database-schema.md  repository-structure.md
docs/blueprint/: 01-product-vision-and-user-experience.md  02-loop-and-mutations.md  03-model-strategy.md  04-architecture-standards-and-trust.md  05-positioning-and-business.md  06-roadmap-mvp-and-handoff.md  07-success-risks-and-north-star.md  README.md
docs/decisions/: 0001-local-first-rust-sqlite.md  0002-versioned-aep-envelope.md  0003-exact-and-hybrid-retrieval.md  0004-local-synthesis-boundary.md  0005-macos-read-only-app.md  0006-claude-code-install-target.md  0006-model-synthesis-providers.md  0007-model-synthesis-providers.md  0008-continuous-ingestion-daemon.md  0009-recurrence-qualification-and-scan-diagnostics.md  0010-agent-cli-synthesis-providers.md  0010-persistent-configuration.md  0011-agent-cli-synthesis-providers.md  0012-squash-migrations-v1-baseline.md  0013-detection-findings-cache.md  0014-signature-normalization-v2.md  0015-mutation-efficacy-tracking.md  0016-team-genome-export-import.md
docs/guides/: claude-code.md  codex.md  configuration.md  deterministic-findings.md  generic-jsonl.md  macos-app.md  mutation-candidates.md  opencode.md  pi.md  privacy-and-lifecycle.md  replay.md  retrieval.md  setup.md  shadow-and-installation.md  synthesis.md  watch-and-daemon.md
docs/roadmap/: alpha-pull-requests.md  milestone-1-pull-requests.md  phase-2-pull-requests.md  release-0.1.0-pull-requests.md
docs/security/: threat-model.md
evals/fixtures/findings/: deterministic.jsonl  recovery-motif.jsonl
evals/fixtures/generic-jsonl/: demo.jsonl
evals/fixtures/replay/: command-preflight-draft.json  command-preflight-fail.json  (+1 more)
packaging/homebrew/: README.md  autophagy.rb
scripts/: demo-milestone-1.sh
(+147 files in other folders)
