[workspace]
resolver = "3"
members = [
  "adapters/claude-code",
  "adapters/codex",
  "crates/autophagy-adapter-test-support",
  "crates/autophagy-cli",
  "crates/autophagy-core",
  "crates/autophagy-events",
  "crates/autophagy-mutations",
  "crates/autophagy-patterns",
  "crates/autophagy-redaction",
  "crates/autophagy-store",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/karnstack/autophagy"

[workspace.dependencies]
clap = { version = "4.6.2", features = ["derive", "env"] }
directories = "6.0"
globset = "0.4"
regex = "1.12"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
