[workspace]
resolver = "3"
members = [
  "adapters/claude-code",
  "adapters/codex",
  "adapters/opencode",
  "adapters/pi",
  "crates/autophagy-adapter-test-support",
  "crates/autophagy-cli",
  "crates/autophagy-core",
  "crates/autophagy-efficacy",
  "crates/autophagy-events",
  "crates/autophagy-genome",
  "crates/autophagy-install",
  "crates/autophagy-mutations",
  "crates/autophagy-patterns",
  "crates/autophagy-redaction",
  "crates/autophagy-replay",
  "crates/autophagy-shadow",
  "crates/autophagy-store",
  "crates/autophagy-synthesis",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/karnstack/autophagy"

[workspace.dependencies]
clap = { version = "4.6.2", features = ["derive", "env"] }
directories = "6.0"
globset = "0.4"
regex = "1.12"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
signal-hook = "0.3"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
toml = { version = "0.9", features = ["parse", "display", "serde"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

# Dependencies compiled with optimizations even in the dev profile. Signature
# normalization (ADR 0014) runs several `regex` passes over every tool command,
# and an unoptimized regex engine is a large part of what makes a cold detection
# pass over a big history crawl (~130s on a 69k-event database in a fully
# unoptimized build). Third-party dependencies change rarely, so optimizing them
# costs a one-time longer build but not day-to-day incremental rebuilds.
# Detection output is byte-identical regardless of opt level.
[profile.dev.package."*"]
opt-level = 2

# The signature normalizer (`autophagy-events`) and the recurrence detectors
# (`autophagy-patterns`) are the workspace's own hot path during detection.
# Optimizing just these two crates recovers the rest of the gap (down to ~12s,
# on par with a release build) without slowing incremental rebuilds of the rest
# of the workspace.
[profile.dev.package.autophagy-events]
opt-level = 2

[profile.dev.package.autophagy-patterns]
opt-level = 2
