[package]
name = "autophagy-adapter-test-support"
description = "Shared conformance assertions for Autophagy native adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
