[package]
name = "autophagy-cli"
description = "Command-line interface for the local Autophagy engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "autophagy"
path = "src/main.rs"

[dependencies]
autophagy-adapter-claude-code = { path = "../../adapters/claude-code" }
autophagy-adapter-codex = { path = "../../adapters/codex" }
autophagy-core = { path = "../autophagy-core" }
autophagy-events = { path = "../autophagy-events" }
autophagy-install = { path = "../autophagy-install" }
autophagy-mutations = { path = "../autophagy-mutations" }
autophagy-patterns = { path = "../autophagy-patterns" }
autophagy-replay = { path = "../autophagy-replay" }
autophagy-shadow = { path = "../autophagy-shadow" }
autophagy-store = { path = "../autophagy-store" }
clap.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
tempfile = "3.27"

[lints]
workspace = true
