[package]
name = "autophagy-core"
description = "Application services and adapter orchestration for Autophagy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
autophagy-events = { path = "../autophagy-events" }
autophagy-store = { path = "../autophagy-store" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.27"

[lints]
workspace = true
