[package]
name = "autophagy-efficacy"
description = "Deterministic post-install recurrence-efficacy evaluation for Autophagy mutations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
jsonschema = { version = "0.47", default-features = false }

[lints]
workspace = true
