[package]
name = "autophagy-events"
description = "Agent Event Protocol types and validation for Autophagy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
jsonschema = { version = "0.47", default-features = false }

[lints]
workspace = true
