[package]
name = "autophagy-mutations"
description = "Versioned, permission-scoped mutation candidates for Autophagy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
autophagy-patterns = { path = "../autophagy-patterns" }
semver.workspace = true
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
autophagy-core = { path = "../autophagy-core" }
autophagy-store = { path = "../autophagy-store" }
jsonschema = { version = "0.47", default-features = false }
serde_json.workspace = true

[lints]
workspace = true
