[package]
name = "autophagy-redaction"
description = "Local secret redaction and path exclusion policy for Autophagy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
autophagy-events = { path = "../autophagy-events" }
globset.workspace = true
regex.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
time.workspace = true

[lints]
workspace = true
