[package]
name = "autophagy-shadow"
description = "Observation-only shadow evaluation for Autophagy mutations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
autophagy-events = { path = "../autophagy-events" }
autophagy-mutations = { path = "../autophagy-mutations" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
autophagy-core = { path = "../autophagy-core" }
autophagy-patterns = { path = "../autophagy-patterns" }
autophagy-store = { path = "../autophagy-store" }
jsonschema = { version = "0.47", default-features = false }

[lints]
workspace = true
