[package]
name = "autophagy-store"
description = "Transactional local SQLite event store for Autophagy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
autophagy-events = { path = "../autophagy-events" }
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
jsonschema = { version = "0.47", default-features = false }
tempfile = "3.27"

[lints]
workspace = true
